--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,22 @@
-.App {
+.bar-container {
+  display: flex;
+  margin-top: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  width: 1000px;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.list-container {
+  margin-top: 40px;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -19,4 +37,4 @@
 
 .App-link {
   color: #09d3ac;
-}
+} */
